# kirodh-food-additives-vegetarian-vegan-safe

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  check_duplicates.py  data_downloader.py  docker-compose.yaml  math_plotter.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
additive_databases/: INSfoodnotes.xlsx  final_INS_and_E_merged.csv
src/db/: connection.py  queries.py  schema.py  species_connection.py  species_queries.py  species_schema.py
src/etl/: build_database.py  build_species_db.py  classifiers.py  e_ins_mapper.py  normalizers.py  parsers.py  species_traits.py  web_scraper.py
src/ui/: app.py
src/ui/components/: additive_card.py  charts.py
src/ui/pages/: analytics.py  browse.py  math_plotter.py  reverse_subtract.py  search.py  species.py
src/utils/: constants.py  text_analysis.py
tests/: conftest.py  test_build_database.py  test_classifiers.py  test_e_ins_mapper.py  test_normalizers.py  test_queries.py
